Refactor Package Service class